Fix broken layout on Android browser

--- a/public/s/styles/less/client-chat.less
+++ b/public/s/styles/less/client-chat.less
@@ -229,7 +229,7 @@
                 display: block;
                 width: 100%;
                 height: @bar-height;
-                padding: .15em;
+                padding: .25em;
             }
 
             .search-entry {
@@ -247,9 +247,9 @@
         .opacity(0);
         .ease;
 
-        position: absolute;
-        top: @bar-height + 1em;
-        right: 1em;
+        position: relative;
+        float: right;
+        margin: 1em 2em;
         padding: .5em 1em;
         background-color: @dark-color;
         color: @light-color;
